# AgenticAIprojects

./: .gitignore  LICENSE  README.md  SETUP.md  pilotmet.ipynb  pyproject.toml
interactiveCV_resume/: DEPLOY.md  README.md  intResumeDeploy.py  interactiveResume.ipynb
interactiveCV_resume/me/: summarysrp.txt
pianoLog/: README.md  piano.db  pianoLOG_agents.ipynb  pianodatabase.ipynb
resumeChecker/: README.md  resumeCreator.ipynb
