[project]
name = "agents"
version = "0.1.0"
description = "Agent project"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "openai>=1.87.0",
    "python-dotenv>=1.0.0",
    "requests>=2.0.0",
    "pypdf>=5.0.0",
    "gradio>=5.0.0",
    "playwright>=1.50.0",
    "pydantic>=2.0.0",
    "pygame>=2.6.1",
    "openai-agents>=0.13.6",
    "pyautogen>=0.4.0",
]

[dependency-groups]
dev = [
    "ipykernel>=6.0.0",
]
